Add blueprintjs ui

--- a/packages/client/src/index.html
+++ b/packages/client/src/index.html
@@ -4,6 +4,7 @@
     <title>KIT Timetable</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body>
     <main></main>
